# UADE-Testing-Calculadora

./: README.md  pyproject.toml  report.html  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  calculator.py  cli.py  main.py
tests/: __init__.py  test_calculator.py
