[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculadora-python"
version = "0.1.0"
description = "Calculadora simple en Python"
requires-python = ">=3.10"
dependencies = ["pytest>=8.0", "pytest-html>=4.1.1"]

[tool.setuptools]
packages = ["app"]
